# lotusql

./: README.md  pyproject.toml
data/: train.sqlite
src/lotusql/: app.py  chat_agent.py  data_retrieval.py  initialize_service.py  interact_with_agent.py  tools.py
tests/: convert.ipynb
